--- a/app/src/main/res/layout/cart_items_layout.xml
+++ b/app/src/main/res/layout/cart_items_layout.xml
@@ -1,51 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+app:cardCornerRadius="10dp"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_margin="5dp"
+android:background="@color/cardview_shadow_end_color"
+android:padding="10dp"
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp"
-    app:cardElevation="15dp">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark"
-        android:padding="10dp"
+    android:orientation="horizontal"
+    android:weightSum="2">
 
-        >
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+        <ImageView
+            android:id="@+id/cart_product_image"
+            android:padding="5dp"
+            android:src="@drawable/product_sample_image"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
+
         <TextView
-
             android:id="@+id/cart_product_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="চালের নামঃ "
+            android:text="Product Name"
+            android:textColor="@color/Black"
             android:textSize="15sp"
-            android:textColor="@android:color/white"
-            />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/cart_product_quantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/cart_product_name"
-            android:text="পরিমানঃ "
-            android:textColor="@android:color/white"
-            android:textSize="15sp"
-            android:layout_marginRight="5dp"
+            android:fontFamily="sans-serif-light"
+            android:text="Product Quantity"
+            android:textColor="@color/Black"
+            android:textSize="15sp" />
 
-            />
         <TextView
-
             android:id="@+id/cart_product_price"
             android:layout_width="match_parent"
-            android:layout_below="@+id/cart_product_quantity"
             android:layout_height="wrap_content"
-            android:text="দামঃ "
-            android:textSize="15sp"
-            android:textColor="@android:color/white"
+            android:fontFamily="sans-serif-light"
+            android:text="$ Product Price"
+            android:textColor="@color/Black"
+            android:textSize="15sp" />
 
+    </LinearLayout>
 
-            />
-
-    </RelativeLayout>
+</LinearLayout>
 
 </androidx.cardview.widget.CardView>
