--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -8,30 +8,32 @@
 
             android:id="@+id/nav_cart"
             android:title="Cart"
+            android:icon="@drawable/ic_cart"
             android:iconTint="@color/White"
             />
         <item
             android:id="@+id/nav_search"
-
             android:title="Search Items"
+            android:icon="@drawable/ic_search"
             android:iconTint="@color/White"
             />
 
         <item
             android:id="@+id/nav_settings"
-
             android:title="Settings"
+            android:icon="@drawable/ic_settings"
             android:iconTint="@color/White"
             />
         <item
             android:id="@+id/nav_logout"
-
             android:title="Log Out"
+            android:icon="@drawable/ic_exit_to_app"
             android:iconTint="@color/White"
             />
         <item
             android:id="@+id/about"
             android:title="About"
+            android:icon="@drawable/ic_sticky_note"
             android:iconTint="@color/White"
             />
 
