--- a/app/src/main/res/layout/activity_confirm_final_order.xml
+++ b/app/src/main/res/layout/activity_confirm_final_order.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:id="@+id/shippment_name"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="text"
             android:maxLength="50"
             android:maxLines="1"
             android:singleLine="true"
@@ -85,7 +85,7 @@
             android:layout_width="match_parent"
             android:id="@+id/shippment_address"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="text"
             android:maxLength="50"
             android:maxLines="1"
             android:singleLine="true"
@@ -108,7 +108,7 @@
             android:layout_width="match_parent"
             android:id="@+id/shipment_city"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="text"
             android:maxLength="50"
             android:maxLines="1"
             android:singleLine="true"
