--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,25 +23,22 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:src="@drawable/ricebd"
+            android:layout_height="200dp"
+            android:src="@drawable/logo"
             android:scaleType="fitCenter"
             />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_gravity="center"
             android:text="Sign in to continue"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
             android:textColor="@color/blue_grey_200"
             android:textStyle="bold" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="120dp"
-            />
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
