--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -21,14 +21,11 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="200dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/ricebd" />
+            android:src="@drawable/logo" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            />
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
