--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#33A1C9</color>
-    <color name="colorPrimaryDark">#33A1C9</color>
+    <color name="colorPrimary">#0072B5</color>
+    <color name="colorPrimaryDark">#0072B5</color>
     <color name="colorAccent">#03DAC5</color>
 
     <color name="White">#FFFFFF</color>
