--- a/app/src/main/res/layout/activity_search_products.xml
+++ b/app/src/main/res/layout/activity_search_products.xml
@@ -29,7 +29,7 @@
             android:id="@+id/search_product_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Search Product Here!!"
+            android:hint="@string/search_product_here"
             android:textColorHint="@color/overlay_dark_10"
             android:textSize="16sp"
             android:background="@drawable/searchedittextbackground"
@@ -41,6 +41,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/search_list"
