--- a/app/src/main/res/layout/activity_settins.xml
+++ b/app/src/main/res/layout/activity_settins.xml
@@ -30,8 +30,8 @@
                     android:textColor="@android:color/white"
                     android:textSize="17sp"
                     android:textStyle="bold"
-                    android:layout_alignParentStart="true"
-                    />
+
+                    android:layout_alignParentLeft="true" />
 
                 <TextView
                     android:id="@+id/update_account_settings_btn"
@@ -42,8 +42,8 @@
                     android:textSize="17sp"
                     android:textStyle="bold"
                     android:layout_marginRight="10dp"
-                    android:layout_alignParentEnd="true"
-                    />
+
+                    android:layout_alignParentRight="true" />
 
             </RelativeLayout>
 
