--- a/app/src/main/res/layout/activity_aboutpage.xml
+++ b/app/src/main/res/layout/activity_aboutpage.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_10"
@@ -274,7 +275,8 @@
                             android:layout_height="@dimen/spacing_xmlarge"
                             android:background="@android:color/transparent"
                             android:tint="@color/grey_40"
-                            app:srcCompat="@drawable/ic_baseline_person_24" />
+                            app:srcCompat="@drawable/ic_baseline_person_24"
+                            tools:ignore="VectorDrawableCompat" />
 
                         <View
                             android:layout_width="@dimen/spacing_mlarge"
@@ -288,7 +290,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Ragib Muhit"
+                                android:text="Ragib Muid"
                                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                 android:textColor="@color/grey_80"
                                 app:fontFamily="sans-serif-medium" />
