images format change

--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -85,19 +85,17 @@
             />
 
 
-        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
+        <Button
+            android:text="@string/plus"
             android:id="@+id/number_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:elevation="6dp"
-            app:textSize="16dp"
-            app:initialNumber="1"
-            app:finalNumber="10"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/product_price_details"
 
             >
-        </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
+        </Button>
 
 
         <Button
