--- a/app/src/main/res/layout/activity_settins.xml
+++ b/app/src/main/res/layout/activity_settins.xml
@@ -80,10 +80,11 @@
     <EditText
         android:id="@+id/settings_phone_number"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="49dp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginVertical="5dp"
         android:layout_below="@+id/profile_image_change_btn"
         android:hint="Phone Number..."
-        android:layout_margin="15dp"
         android:padding="10dp"
         android:maxLines="1"
         />
@@ -91,10 +92,11 @@
     <EditText
         android:id="@+id/settings_full_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="49dp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginVertical="5dp"
         android:layout_below="@+id/settings_phone_number"
         android:hint="Full Name..."
-        android:layout_margin="15dp"
         android:padding="10dp"
         android:maxLines="1"
 
@@ -103,10 +105,11 @@
     <EditText
         android:id="@+id/settings_address"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="49dp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginVertical="5dp"
         android:layout_below="@+id/settings_full_name"
         android:hint="Address..."
-        android:layout_margin="15dp"
         android:padding="10dp"
         />
 
