--- a/app/src/main/res/layout/activity_category_item.xml
+++ b/app/src/main/res/layout/activity_category_item.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CategoryItemActivity">
+    tools:context=".view.CategoryItemActivity">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="80dp"
