--- a/app/src/main/res/layout/activity_confirm_final_order.xml
+++ b/app/src/main/res/layout/activity_confirm_final_order.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ConfirmFinalOrderActivity">
+    tools:context=".view.ConfirmFinalOrderActivity">
 
     <TextView
         android:id="@+id/txt"
