--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,7 @@
     android:fitsSystemWindows="true"
     android:id="@+id/drawerLayout"
     tools:openDrawer="start"
-    tools:context=".HomeActivity">
+    tools:context=".view.HomeActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
