--- a/app/src/main/res/layout/activity_my_orders.xml
+++ b/app/src/main/res/layout/activity_my_orders.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MyOrdersActivity">
+    tools:context=".view.MyOrdersActivity">
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
