--- a/app/src/main/res/layout/activity_settins.xml
+++ b/app/src/main/res/layout/activity_settins.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettinsActivity">
+    tools:context=".view.SettinsActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_settings"
