--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -9,7 +9,7 @@
     >
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         >
 
         <ImageView
@@ -84,6 +84,14 @@
 
             />
 
+        <EditText
+            android:text="1"
+            android:id="@+id/numberET"
+            android:layout_width="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/product_price_details"
+            />
 
         <Button
             android:text="@string/plus"
@@ -92,7 +100,7 @@
             android:layout_height="wrap_content"
             android:elevation="6dp"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/product_price_details"
+            android:layout_below="@+id/numberET"
 
             >
         </Button>
@@ -106,9 +114,9 @@
             android:background="@color/colorPrimaryDark"
             android:layout_margin="15dp"
             android:layout_alignParentBottom="true"
-            android:text="Add to Cart"
+            android:text="@string/add_to_cart"
             android:textColor="@android:color/white"
-            android:textSize="18dp"
+            android:textSize="18sp"
             />
 
     </RelativeLayout>
