--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -20,7 +20,7 @@
             />
 
         <TextView
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             android:id="@+id/sample1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
